tests/lean/evalInstMessage.lean
def double (x : Nat) := 2*x

#eval double
